--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,9 +1,10 @@
-<div class="px-6 sm:px-8  pt-16 mb-5 lg:px-20"
-    style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
+<div class="px-6 sm:px-8  pt-16 mb-5 lg:px-20 linear-gradient ">
     <div class="nav flex flex-row justify-between">
         <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
         <div class="flex flex-row">
-            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire 😍
+            <button
+                class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover flex flex-row items-center font-semibold "
+                routerLink="/landing">M'inscrire<span class="hidden md:block ml-2">😍</span>
             </button>
 
         </div>
@@ -12,10 +13,10 @@
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
 
-              
+
                 <h1
                     class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-5xl ">
-                    L'immobilier  <span class="light-red">comme il devrait l'être </span> </h1>
+                    L'immobilier <span class="light-red">comme il devrait l'être </span> </h1>
             </div>
         </div>
         <div>
@@ -42,14 +43,15 @@
 
                 </div>
 
-                <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs . Aucun intermédiaire ! notre
+                <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs .
+                    Aucun intermédiaire ! notre
                     vocation est de mettre en relation tous les acteurs du marché immobilier afin de permettre un
                     meilleur échange et à toutes les recherches d’aboutir rapidement. <br> <br> Que vous soyez remetteur
                     d’un
                     bien, propriétaire souhaitant louer un objet, ou que vous soyez à la recherche d’un logement, notre
                     réseau vous mettra en lien direct avec les acteurs qui vous correspondent et vous permettra
                     d’effectuer une recherche ciblée afin de trouver en un rien de temps le candidat ou le bien parfait
-                    pour vous.  <br><br>Depuis le profil créé
+                    pour vous. <br><br>Depuis le profil créé
                     en quelques clics, nos outils proposés sur la plateforme sont véritablement un
                     assistant de gestion de votre projet. La plateforme prend en charge tout le processus de manière
                     entièrement digitalisée.</p>
@@ -86,7 +88,7 @@
                             Locataire
                         </p>
                         <p class="mt-3 text-lg text-gray-500 ">
-                           Tenders, la platforme indipensable pour trouver le bien qui vous correspond rapidement.
+                            Tenders, la platforme indipensable pour trouver le bien qui vous correspond rapidement.
                         </p>
                     </a>
                 </div>
@@ -111,7 +113,8 @@
                             Propriétaire
                         </p>
                         <p class="mt-3 text-lg text-gray-500">
-                            Tenders, la platforme indipensable pour trouver le candidat qui vous correspond rapidement rapidement.
+                            Tenders, la platforme indipensable pour trouver le candidat qui vous correspond rapidement
+                            rapidement.
                         </p>
                     </a>
                 </div>
@@ -128,7 +131,8 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si vous êtes à la recherche d'un bien</h1>
+                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si vous êtes à la recherche d'un bien
+                </h1>
                 <div class="flex flex-row">
                     <h2 class="text-3xl popping font-extrabold leading-snug sm:text-4xl">Trouvez
                         <span class="light-red">ce qui vous correspond</span>
@@ -158,7 +162,8 @@
 
                 <div class=" flex flex-row">
                     <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl">
-                        Postulez et consultez en temps réel <span class="text--blue">la progression de votre dossier</span> </h1>
+                        Postulez et consultez en temps réel <span class="text--blue">la progression de votre
+                            dossier</span> </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
@@ -177,8 +182,8 @@
                         <h2 class="text-4xl popping font-extrabold leading-snug ">Gèrez <span class="light-red">vos
                                 visites</span>
                         </h2>
-                        <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px"
-                            alt="">
+                        <img src="../../../../../assets/images/bulle9.png" class="hidden md:block -translate-y-16"
+                            height="100px" alt="">
                     </div>
 
                     <p class="text-lg text-gray-500">Notre plateforme offre un accompagnement complet et totalement
@@ -197,13 +202,15 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2 grid-flow-scolgap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire</h1>
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire
+                </h1>
                 <div class="flex flex-row ">
                     <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publiez <span
                             class="light-yellow">vos biens<br>immobiliers</span></h2>
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500 mb-10">Pour celui qui recherche un/des candidat(s), notre plateforme
+                <p class="mt-5 text-lg text-gray-500 mb-10">Pour celui qui recherche un/des candidat(s), notre
+                    plateforme
                     offre un accompagnement complet. Il
                     vous suffit de vous connecter et de publier votre bien.
                     <br><br>
@@ -227,7 +234,7 @@
                         <span class="text--blue">le candidat idéal ?</span>
                     </h2>
                     <img src="../../../../../assets/images/bulle8.png"
-                        class="-translate-y-20 -translate-x-16 height-100" alt="">
+                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt="">
                 </div>
 
                 <p class="mt-5 text-lg text-gray-500">
@@ -265,8 +272,9 @@
                         class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Tenders supprime les intermédiaires et vous permet de créer des liens directs 
-                avec ceux dont vous avez besoin pour faire aboutir vos recherches rapidement. <br><br>
+                <p class="mt-5 text-lg text-gray-500">Tenders supprime les intermédiaires et vous permet de créer des
+                    liens directs
+                    avec ceux dont vous avez besoin pour faire aboutir vos recherches rapidement. <br><br>
 
                 </p>
             </div>
