--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -54,7 +54,8 @@
                 </button>
             </div>
             <div class="mt-5 text-center text-base">
-                <span class="inter text-gray-400">Pas encore inscrit(e) ? </span><span class="popping text--blue">
+                <span class="inter text-gray-400">Pas encore inscrit(e) ? </span><span
+                    class="popping text--blue hover:cursor-pointer active:-translate-y-1" routerLink="/register">
                     S'inscrire</span>
             </div>
         </div>
