--- a/src/app/modules/register/pages/register/register.component.html
+++ b/src/app/modules/register/pages/register/register.component.html
@@ -17,7 +17,7 @@
   <div class="flex-1 flex h-full flex-col justify-center w-1/2  py-6 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
 
     <div class="text-right mb-2">
-      <a class="inline-flex items-center py-2  text-xl text-blue-2 cursor-pointer hover:bg-blue-2">
+      <a class="inline-flex items-center py-2  text-xl text-blue-2 cursor-pointer hover:bg-blue-2" routerLink="/login">
         Se connecter
       </a>
 
