--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="px-6 sm:px-8  pt-16 mb-5 lg:px-20 linear-gradient ">
     <div class="nav flex flex-row justify-between">
-        <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
+        <a routerLink="/home"><img src="../../../../../assets/images/logo1.png"
+                class="animate__animated animate__fadeInUp" alt="">
+        </a>
         <div class="flex flex-row">
             <button
                 class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover flex flex-row items-center font-semibold "
@@ -92,8 +94,8 @@
                         </p>
                     </a>
                 </div>
-                <div class="mt-6 flex items-center">
-                    <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
+                <div class="mt-6 flex items-center" routerLink="/landing">
+                    <p class="text-lg popping font-extrabold text--blue mr-5 cursor-pointer">Commencer </p>
                     <img src="../../../../../assets/images/right-arrow.png" alt="">
                 </div>
             </div>
@@ -118,7 +120,7 @@
                         </p>
                     </a>
                 </div>
-                <div class="mt-6 flex items-center ">
+                <div class="mt-6 flex items-center cursor-pointer" routerLink="/landing">
                     <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
                     <img src="../../../../../assets/images/right-arrow.png" alt="">
                 </div>
@@ -182,8 +184,8 @@
                         <h2 class="text-4xl popping font-extrabold leading-snug ">Gèrez <span class="light-red">vos
                                 visites</span>
                         </h2>
-                        <img src="../../../../../assets/images/bulle9.png" class="hidden md:block -translate-y-16"
-                            height="100px" alt="">
+                        <!--  <img src="../../../../../assets/images/bulle9.png" class="hidden md:block -translate-y-16"
+                            height="100px" alt=""> -->
                     </div>
 
                     <p class="text-lg text-gray-500">Notre plateforme offre un accompagnement complet et totalement
@@ -233,8 +235,8 @@
                     <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
                         <span class="text--blue">le candidat idéal ?</span>
                     </h2>
-                    <img src="../../../../../assets/images/bulle8.png"
-                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt="">
+                    <!--  <img src="../../../../../assets/images/bulle8.png"
+                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt=""> -->
                 </div>
 
                 <p class="mt-5 text-lg text-gray-500">
