--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -1,12 +1,11 @@
 <div class="  px-6 sm:px-8  pt-16 mb-5 lg:px-24 linear-gradient h-screen">
 
     <div class="flex justify-between mb-20 container px-18">
-        <img src="../../../../../assets/images/logo1.png" class="animate__animated animate__fadeInUp" alt="">
-
+        <a routerLink="/home"><img src="../../../../../assets/images/logo1.png"
+                class="animate__animated animate__fadeInUp" alt=""></a>
         <button
             class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold flex flex-row items-center justify-between"
             routerLink="/home">Accueil
-            <span class="hidden md:block ml-2">😍</span>
         </button>
     </div>
     <div class="grid md:grid-cols-2">
@@ -15,7 +14,7 @@
                 alt="">
             <h2
                 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-4xl text-black leading-tight sm:text-4xl leading-20 animate__animated animate__fadeInUp  ">
-                Heureux de vous avoir dans <br> <span class="text-blue-300">notre communauté</span> </h2>
+                Heureux de vous savoir dans <br> <span class="text-blue-300">notre communauté</span> </h2>
 
         </div>
         <div class="justify-self-center">
