--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="px-6 sm:px-8  pt-16 mb-5 lg:px-20 linear-gradient ">
-    <div class="nav flex flex-row justify-between">
+    <div class="nav flex flex-row justify-between ">
         <a routerLink="/home"><img src="../../../../../assets/images/logo1.png"
                 class="animate__animated animate__fadeInUp" alt="">
         </a>
@@ -10,6 +10,9 @@
             </button>
 
         </div>
+
+        
+
     </div>
     <div class="grid md:grid-cols-2 mt-10 container mx-auto lg:px-10">
         <div class="flex flex-col my-auto items-start">
@@ -27,6 +30,9 @@
         </div>
     </div>
 </div>
+
+
+
 <div class="px-6 sm:px-8 lg:px-24  mb-5">
     <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp">
@@ -45,8 +51,8 @@
 
                 </div>
 
-                <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs .
-                    Aucun intermédiaire ! notre
+                <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs.
+                    Aucun intermédiaire ! Notre
                     vocation est de mettre en relation tous les acteurs du marché immobilier afin de permettre un
                     meilleur échange et à toutes les recherches d’aboutir rapidement. <br> <br> Que vous soyez remetteur
                     d’un
@@ -66,7 +72,7 @@
         <div class="flex flex-col items-center">
 
             <h2 class="text-4xl popping font-extrabold leading-sng mt-10 text-center sm:text-6xl">
-                Une platforme pensées <br>
+                Une plateforme pensée <br>
                 <span class="text-blue-2">
                     pour vous
                 </span>
@@ -90,7 +96,7 @@
                             Locataire
                         </p>
                         <p class="mt-3 text-lg text-gray-500 ">
-                            Tenders, la platforme indipensable pour trouver le bien qui vous correspond rapidement.
+                            Tenders, la plateforme indipensable pour trouver le bien qui vous correspond rapidement.
                         </p>
                     </a>
                 </div>
@@ -115,8 +121,7 @@
                             Propriétaire
                         </p>
                         <p class="mt-3 text-lg text-gray-500">
-                            Tenders, la platforme indipensable pour trouver le candidat qui vous correspond rapidement
-                            rapidement.
+                            Grâce à Tenders, trouver en un rien de temps le candidat idéal pour la location de votre bien.
                         </p>
                     </a>
                 </div>
@@ -133,7 +138,7 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si vous êtes à la recherche d'un bien
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Si vous êtes à la recherche d'un bien
                 </h1>
                 <div class="flex flex-row">
                     <h2 class="text-3xl popping font-extrabold leading-snug sm:text-4xl">Trouvez
@@ -155,7 +160,7 @@
     <div class="relative   mt-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2 gap-14 ">
 
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png"
+            <img src="../../../../../assets/images/GROUPE.png"
                 class="order-last md:order-first" alt="">
             <div class="flex flex-col pt-10 items-end ">
 
@@ -163,14 +168,14 @@
             <div class="flex flex-col pt-0 xl:pt-10 items-start"> -->
 
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl">
+                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl ">
                         Postulez et consultez en temps réel <span class="text--blue">la progression de votre
                             dossier</span> </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Postulez depuis la plateforme et gérez la progression
+                <p class="mt-5 text-lg text-left text-gray-500">Postulez depuis la plateforme et gérez la progression
                     du processus. Plus qu’un réseau, c’est votre
                     assistant de recherche digital. </p>
             </div>
@@ -181,7 +186,7 @@
 
                 <div class="flex flex-col pt-10 items-start ">
                     <div class="flex flex-row">
-                        <h2 class="text-4xl popping font-extrabold leading-snug ">Gèrez <span class="light-red">vos
+                        <h2 class="text-4xl popping font-extrabold leading-snug mb-6 ">Gèrez <span class="light-red">vos
                                 visites</span>
                         </h2>
                         <!--  <img src="../../../../../assets/images/bulle9.png" class="hidden md:block -translate-y-16"
@@ -191,8 +196,7 @@
                     <p class="text-lg text-gray-500">Notre plateforme offre un accompagnement complet et totalement
                         digitalisé pour que votre
                         expérience soit la plus agréable possible. Et cela de la planification de la visite via votre
-                        agenda en
-                        ligne, au dépôt du dossier complet et suivi de l’avancement.</p>
+                        agenda en ligne jusqu'au dépôt du dossier complet et suivi de l’avancement.</p>
                 </div>
                 <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png"
                     class="mx-auto md:mx-0 shadow-lg" alt="">
@@ -200,6 +204,45 @@
             </div>
         </div>
     </div>
+
+   
+
+
+
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
+        <div class="grid md:grid-cols-2  gap-14">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png"
+                class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
+
+            <div class="flex flex-col pt-10 items-start ">
+                <div class="flex flex-row">
+                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
+                        <span class="text--blue">le candidat idéal ?</span>
+                    </h2>
+                    <!--  <img src="../../../../../assets/images/bulle8.png"
+                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt=""> -->
+                </div>
+
+                <p class="mt-5 text-lg text-gray-500">
+                    Les algorithmes développés pour notre plateforme permettent aux remetteurs de bail et aux
+                    propriétaires désireux de louer leur bien, une sélection et un tri minitieux des dossiers de
+                    candidatures.
+                    <br> <br>
+                    Nous nous assurons de la conformité des informations communiquées
+                    avec les documents téléchargés et ne proposons que des dossiers en accord avec les critères
+                    d’éligibilité appliqués. De ce fait, nous pouvons limiter le nombre de dossiers de candidatures (5
+                    dossiers maximum).
+                    <br><br>
+                    Cette sélection évite aux remetteurs et propriétaires d’avoir trop de dossiers à
+                    traiter et offre aux demandeurs davantage de chances d’être retenu. De plus, pour ces derniers,
+                    cela
+                    représente un énorme gain de temps en les accompagnant et en les orientant vers ce à quoi ils
+                    peuvent réellement prétendre.
+                </p>
+            </div>
+        </div>
+    </div>
+
 
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2 grid-flow-scolgap-14">
@@ -216,8 +259,8 @@
                     offre un accompagnement complet. Il
                     vous suffit de vous connecter et de publier votre bien.
                     <br><br>
-                    Tenders vous accompagne dans la publication de votre bien en vous proposant une serie d'information
-                    à remplir afin de maximiser vos chance pour trouver le/les candidat(s) qui vous correspond le plus.
+                    Tenders vous accompagne dans la publication de votre bien en vous proposant une série d'informations
+                    à remplir afin de maximiser vos chances pour trouver le/les candidat(s) qui vous correspondent le plus.
                 </p>
             </div>
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/32. nouveau_bien7.png"
@@ -225,40 +268,7 @@
 
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
-        <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png"
-                class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
 
-            <div class="flex flex-col pt-10 items-start ">
-                <div class="flex flex-row">
-                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
-                        <span class="text--blue">le candidat idéal ?</span>
-                    </h2>
-                    <!--  <img src="../../../../../assets/images/bulle8.png"
-                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt=""> -->
-                </div>
-
-                <p class="mt-5 text-lg text-gray-500">
-                    Les algorithmes développés pour notre plateforme permettent, aux remetteur de bail et aux
-                    propriétaires désireux de louer leur bien, une sélection, un tri minutieux des dossiers de
-                    candidatures.
-                    <br> <br>
-                    Nous nous assurons de la conformité des informations communiquées
-                    avec les documents téléchargés et ne proposons que des dossiers en accord avec les critères
-                    d’éligibilité appliqués. De ce fait, nous pouvons limiter le nombre de dossiers de candidatures (5
-                    dossiers maximum).
-                    <br><br>
-                    Cette sélection évite aux remetteurs et propriétaires d’avoir trop de dossiers à
-                    traiter et offre aux demandeurs davantage de chances d’être retenus. De plus, pour ces derniers,
-                    cela
-                    représente un énorme gain de temps en les accompagnant et en les orientant vers ce à quoi ils
-                    peuvent réellement prétendre.
-                </p>
-            </div>
-
-        </div>
-    </div>
 
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
@@ -288,14 +298,13 @@
             height="100px">
         <div class="flex flex-col my-auto items-start px-5 md:px-0">
             <h1 class="popping font-extrabold text-2xl ">Newsletter</h1>
-            <p class="text-lg text-gray-500 mt-3">Abonnez-vous à la newsletter pour recevoir une
-                notification dès le lancement
+            <p class="text-lg text-gray-500 mt-3">Inscrivez-vous et créer votre profil afin d'être les premiers connecter. Vous recevrez une notification un jour avant le lancement.
             </p>
             <div class="mt-5 w-full">
                 <input type="email" name="email" id="email" placeholder="Votre email"
                     class="py-3 mt-2 px-4  xl:w-1/2 inline  shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 <button class=" bg-blue  hover:bg-blue-700 text-white ml-2 font-bold py-3 px-12 rounded-xl mt-3 mb-8">
-                    Démarrer</button>
+                    S'abonner</button>
             </div>
 
         </div>
